[tool.poetry]
name = "graphsaasflet"
version = "0.1.0"
description = ""
authors = ["Nontinium <The.diamond.Pro.123456789@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.23.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
